# Kaede

./: .gitignore  .travis.yml  README.md  boards.py  config.py  headerbar_layout.glade  headerbar_menu.glade  image_window_layout.glade  main.py  main_window_ui.glade  pyproject.toml  requirements.txt  setup.cfg  setup.py  threads.py
docs/source/: conf.py  index.rst  reference.rst
kaede/: MANIFEST.in  __init__.py  __main__.py  boards.py  image.py  posts.py  threads.py
kaede/ui/: main_window_layout.glade
kaedegtk/: __init__.py  __main__.py  util.py
libkaede/: __init__.py  __version__.py  boards.py  posts.py  util.py
tests/: test_boards.py  test_image.py  test_posts.py  test_util.py
ui/: headerbar_menu.glade  image_window_layout.glade  main_window_layout.glade
