[build-system]
requires = ["flit>=1.1"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "kaede"
author = "Oliver Hattshire"
author-email = 'com.gmail:hattshire'
description-file = "README.md"
dist-name = "libkaede"
home-page = "https://github.com/hattshire/kaede"
requires = ["requests"]
requires-python = "~=3.6"

classifiers = [
	"Intended Audience :: Developers",
    "Development Status :: 1 - Planning",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Internet",
]

[tool.flit.metadata.urls]
"Issue Tracker" = "https://github.com/hattshire/kaede/issues"

[tool.flit.metadata.requires-extra]
test = [
	"pytest",
	"pytest-cov",
	"httpretty"
]
doc = ["sphinx"]

[tool.flit.entrypoints."kaede.boards_provider"]
"tbib" = "kaede.boards:TbibProvider"
"gelbooru" = "kaede.boards:GelbooruProvider"
