[build-system]
requires = ["flit>=1.1"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "kaede"
author = "Oliver Hattshire"
author-email = 'com.gmail:hattshire'
home-page = "https://github.com/hattshire/kaede"
description-file = "README.md"
requires-python = "~=3.6"
requires = ["requests"]
dist-name = "libkaede"

classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: The Unlicense (Unlicense)","Topic :: Internet",
]

[tool.flit.metadata.urls]
"Issue Tracker" = "https://github.com/hattshire/kaede/issues"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "httpretty"
]
doc = ["sphinx"]

[tool.flit.entrypoints."kaede.boards_provider"]
"tbib" = "kaede.boards:TbibProvider"
"gelbooru" = "kaede.boards:GelbooruProvider"
