[metadata]
name = kaede
version = 0.1.0
author = Oliver Hattshire
author-email = hattshire@users.noreply.github.com
url = https://github.com/hattshire/kaede
description = "Image-board browser"
long_description = file: README.md
long_description_content_type = text/markdown
license = UNLICENSE
license_file = COPYING
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python

[options]
packages = kaede
include_package_data = true
setup_requires =
    setuptools
python_requires = >=3.6
install_requires =
    pygobject
    requests
    appdirs
